# yari

./: ChangeLog  Makefile  README  README.cacao  README.html
BeMicro/: Makefile  default.conf  (+5 more)
cacao-related/cacao/doc/handbook/: Makefile.am  java.bib
cacao-related/cacao/src/native/: Makefile.am  Makefile.in
cacao-related/cacao/src/native/include/: Makefile.am  Makefile.in
cacao-related/cacao/src/native/jvmti/: cacaodbg.c  cacaodbgserver.c  cacaodbgserver.h  jvmti.c  jvmti.h
cacao-related/cacao/src/native/tools/: gennativetable.c
cacao-related/cacao/src/native/vm/: Makefile.am  Makefile.in  java_lang_Class.c  java_lang_Class.h  java_lang_ClassLoader.h  java_lang_Runtime.c  java_lang_Thread.c  java_lang_Thread.h
cacao-related/cacao/src/native/vm/cldc1.1/: com_sun_cldc_io_ResourceInputStream.c  com_sun_cldchi_io_ConsoleOutputStream.c  java_lang_Double.c  java_lang_Float.c  java_lang_Object.c
cacao-related/cacao/src/native/vm/gnu/: Makefile.in  VMjdwp.h  gnu_classpath_VMStackWalker.c  gnu_classpath_jdwp_VMMethod.c  gnu_java_lang_management_VMMemoryMXBeanImpl.c  gnu_java_lang_management_VMRuntimeMXBeanImpl.c  gnu_java_lang_management_VMThreadMXBeanImpl.c  java_lang_VMClass.c  java_lang_VMString.c  java_lang_VMSystem.c  java_lang_management_VMManagementFactory.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c
cacao-related/cacao/src/toolbox/: Makefile.am  avl.c  chain.c  hashtable.c  hashtable.h  list.c  list.h  logging.c  tree.c  util.c  worklist.c  worklist.h
cacao-related/cacao/src/vm/jit/allocator/: Makefile.am  Makefile.in  liveness.h  lsra.h  simplereg.c
cacao-related/cacao/src/vm/jit/loop/: Makefile.am  Makefile.in  analyze.h  graph.h  loop.h  tracing.c
cacao-related/cacao/src/vm/jit/optimizing/: Makefile.am  Makefile.in  dominators.c  dominators.h  graph.c  graph.h  ifconv.c  ifconv.h  lifetimes.c  lifetimes.h  lsra.h  profile.h  recompile.c  reorder.h  ssa.c
cacao-related/cacao/src/vmcore/: Makefile.am  Makefile.in  annotation.h  classcache.c  classcache.h  embedded_classes.c  field.h  java-hello-classes.c  java-jbe11-kfl-classes.c  java-jbe11-lift-classes.c  java-jbe11-micro-classes.c  java-jbe11-predictablekfl-classes.c  linker.c  linker.h  loader.c  method.c  options.h  rt-timing.h  stackmap.c  stackmap.h  statistics.c  statistics.h  suck.h  utf8.c
cacao-related/cacao/tests/regression/codepatching/: Makefile.am  Makefile.in  aastoreconstClass.java  checkcastC.java  checkcastI.java  getfieldI.java  getstaticD.java  getstaticF.java  getstaticL.java  instanceofC.java  putfieldD.java  putfieldF.java  putfieldI.java  putfieldL.java  putfieldconstC.java  putfieldconstD.java  putfieldconstJ.java  putstaticD.java  putstaticL.java  putstaticconstC.java  putstaticconstF.java  putstaticconstJ.java  test.java
cacao-related/cacao/tests/regression/resolving/: Makefile.am  TestController.java  TestLoader.java  test_simple_lazy_load.java
cacao-related/cacao/tests/regression/resolving/classes1/: BarPassFoo.java  BarUseFoo.java  Makefile.am
cacao-related/cacao/tests/regression/resolving/classes2/: Makefile.in
cacao-related/cacao/tests/regression/resolving/classes3/: BarPassFoo.java  BarUseFoo.java  Foo.java  Makefile.in
shared/cacao-related/cacao/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
shared/cacao-related/cacao/autom4te.cache/: requests  traces.0  traces.1
shared/cacao-related/cacao/contrib/: Makefile.am  Makefile.in  log2xml.pl  setenvsource.in  svn2cl.xsl
shared/cacao-related/cacao/contrib/vmlog/: Makefile.am  Makefile.in  README  maintain.mk  vmlog.h  vmlog_jamvm.c  vmlogdiff.c  vmlogindex.c
shared/cacao-related/cacao/contrib/vmlog/t/: Makefile.am  Makefile.in  concat.c  file.c  hash.c  log.c  memdup.c  opt.c  prolog.h  string.c  tags.c  threadhash.c
shared/cacao-related/cacao/doc/: Makefile.am  Makefile.in
shared/cacao-related/cacao/doc/handbook/: Makefile.in  cacao.tex
shared/cacao-related/cacao/m4/: cacaoh.m4  java.m4  soft.m4  threads.m4
shared/cacao-related/cacao/man/: Makefile.am  cacao.1
shared/cacao-related/cacao/src/: Makefile.am
shared/cacao-related/cacao/src/cacao/: Makefile.am
shared/cacao-related/cacao/src/fdlibm/: Makefile.in
shared/cacao-related/cacao/src/lib/: Makefile.am  Makefile.in
shared/cacao-related/cacao/src/mm/: Makefile.am  gc-common.h  memory.c
shared/cacao-related/cacao/src/mm/boehm-gc/: AmigaOS.c  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  darwin_stop_world.c  finalize.c  gcc_support.c  gcj_mlc.c  headers.c  mark_rts.c  new_hblk.c  obj_map.c  pthread_stop_world.c  ptr_chck.c  reclaim.c  specific.c  stubborn.c
shared/cacao-related/cacao/src/mm/cacao-gc/: Makefile.am  compact.c  gc.h
shared/cacao-related/cacao/src/native/: Makefile.in  jni.c  jni.h  native.c  native.h
shared/cacao-related/cacao/src/native/jvmti/: Makefile.am  Makefile.in  cacaodbg.h  dbg.h
shared/cacao-related/cacao/src/scripts/: Makefile.in
shared/cacao-related/cacao/src/threads/: critical.h
shared/cacao-related/cacao/src/toolbox/: Makefile.in  avl.h  bitvector.c  bitvector.h  chain.h  logging.h  tree.h  util.h
shared/cacao-related/cacao/src/vm/: Makefile.am  Makefile.in  access.c  access.h  builtin.h  builtintable.inc  cycles-stats.c  exceptions.c  exceptions.h  finalizer.c  initialize.c  properties.c  resolve.c  resolve.h  signal.c  signallocal.h  stringlocal.h  vm.c
shared/cacao-related/cacao/src/vmcore/: annotation.c  class.c  class.h  descriptor.c  descriptor.h  embedded_classes.h  field.c  java-hello-short-classes.c  java-jbe11-classes.c  java-jbe11-dokernel-classes.c  java-jbe11-udp-classes.c  loader.h  method.h  options.c  references.h  rt-timing.c  suck.c  utf8.c  utf8.h  zip.c  zip.h
shared/cacao-related/cacao/tests/: A2.java  AA.java  C.java  C3.java  D.java  GG.java  HI2.java  II.java  IICC.java  Makefile.am  Makefile.in  Test.sh  TestArrayClasses.output  TestBase.java
shared/cacao-related/cacao/tests/regression/: Makefile.am  Makefile.in  Test.sh  clinitexception.2output  extest.2output
(+4586 files in other folders)
